# brain-researcher-public

./: .dockerignore  .env.example  .env.local.example  .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .quality.yml  ACKNOWLEDGMENTS.md  AGENTS.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  LICENSE  Makefile  README.md  REDACTION_POLICY.md  SECURITY.md  THREAT_MODEL.md  activate.sh  br-claude  deployment.env.example  docker-compose.cc-stack.yml  docker-compose.prod.yml  docker-compose.yml  environment.brain_researcher.yml  environment.yml  litellm_config.yaml  mkdocs-simple.yml  mkdocs.yml  mypy.ini  neuroimage_env.yaml  pyproject.toml  pytest.ini  requirements-visualization.txt
.devin/: wiki.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: 01-neuroimaging-analysis.yml  02-tool-workflow-request.yml  03-dataset-metadata.yml  04-scientific-validity.yml  05-docs-setup.yml  config.yml
.github/workflows/: ci.yml  harness-certification.yml  pr.yml
apps/: README.md
apps/web-ui/: .dockerignore  .env.example  .env.local.example  .env.test.template  .eslintrc.json  .gitignore  ACCESSIBILITY_TEST_PLAN.md  CHART_COMPONENTS_DEMO.md  CHAT_EXAMPLES.md  CLOUDFLARE_DEPLOYMENT.md  CONFIG.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  INTEGRATION.md  INTEGRATION_GUIDE.md  README-real-pipeline.md  README.md  STORYBOOK_SETUP.md  TESTING_3D_VIEWER.md  UI-042-HELP-SYSTEM-IMPLEMENTATION.md  next.config.development.js  next.config.intl.js  next.config.js  next.config.simple.js  package-lock.json  package.json  playwright.config.real-pipeline.ts  playwright.config.ts  pnpm-lock.yaml  tailwind.config.js  test-chat.js  test-integration.js  tsconfig.json  vite.config.mjs  vitest.config.ts  vitest.setup.ts  wrangler.toml
configs/: behavior_outlier_policy.yaml  chat_scenarios.json  closed_loop_priors.yaml  gates.yaml  intent_priority.yaml  kg_promoted_niwrap.yaml  mapping_rules.generated.yaml  mapping_rules.yaml  mapping_settings.yaml  niwrap_containers.yaml  onvoc_tree.yaml  recovery_map.yaml  retry_taxonomy.yaml  review_rules.yaml  tool_categories.yaml  tool_default_versions.yaml  tool_exposure_policy.yaml  tool_intents.yaml  tool_resources.yaml  tools_catalog.json  tools_catalog_merged.json  tools_catalog_overrides.yaml
configs/agent/: copilot_examples.json
configs/br-kg/: br-kg_fusion_config.yaml  config.yml  coordinate_systems.yaml  data_contracts.yaml  edge_scoring.yaml  golden_queries.yaml  index_plan.yaml  ingestion_modes.yaml  merge_policies.yaml  method_compatibility_seed.yaml  neuroimage_assets_backlog.yaml  pii_redaction.yaml  provenance.yaml  scientific_review_failure_mode_registry.yaml  spatial.yaml  string_normalization.yaml  thresholds.yaml  tool_evidence.yaml
configs/catalog/: .gitkeep  README.md  capabilities.gemini_cli.yaml  capabilities.generated.yaml  capabilities.merged.yaml  capabilities.python.generated.yaml  capabilities.yaml  chat_tool_schemas.yaml  chat_tools.yaml  exposed_tools.yaml  intents.yaml  niwrap_mapping.yaml  pipelines.yaml  studio_scaffold_registry.yaml  studio_tool_mappings.yaml  tool_families.yaml  tool_families_overrides.yaml  tool_family_cards.yaml  tool_id_mappings.yaml  tool_mappings.yaml  tool_synonyms.yaml
configs/codegen/: autoresearch_golden_principles.yaml  benchmark_policy.yaml  constitution.yaml
configs/datasets/: .gitkeep  catalog.v1.jsonl  catalog_manual.jsonl  catalog_openneuro.jsonl  local_mounts.yaml
configs/demo/: demo_index.json  manuscript_map.yaml
configs/evals/: hypothesis_controller_queries.yaml
configs/experiments/: r5_baseline.yaml  tribe_ibc_stimulus_library.yaml
configs/grandmaster/: .gitkeep  toolset_vfinal.yaml
configs/hypothesis/: direction_patterns.v1.json
configs/legacy/: data_paths.yaml  task_mapping.yaml
contracts/: br-tool-contract.schema.json
docs/: CALL_FOR_COLLABATORS_REVIEW_ITEMS.md  CALL_FOR_CONTRIBUTORS_EXPANDED.md  CHANGELOG.md  DEPLOYMENT_GKE.md  E2E_DEMO_EXECUTION_PLAN.md  ENVIRONMENT_SETUP.md  GOLDEN_TESTS_IMPLEMENTATION.md  NICLIP_CONFIGURATION.md  OPERATIONS.md  README.md  SHARE_FUNCTIONALITY_STATUS.md  TASK_MAPPING_EXTENSION_GUIDE.md  UI_WIRING_CHECKLIST.md  catalog_README.md  contract-tiers.md  how-to-add-tool.md  hpc.md  index-simple.md  index.md  knowledge_layer_cache.md  manuscript_capability_alignment.md  mcp.md  mcp_tools.schema.json  migration.md  multiverse_glmfitlins.md  observation_spec.md  offline_batch_rollout_validation.md  paper2_dataset_battery_local.md  telemetry_enablement.md
infrastructure/: README.md  deploy-load-balanced.sh
scripts/: README.md  __init__.py  analyze_code_import_graph.py  banghcp_gcp  benchmark_claim_first_vs_mention_bootstrap.py  calibrate_onvoc_thresholds.py  cleanup_run_artifacts.py  convert_contrast_json.py  deep_research_to_gabriel_manifest.py  deep_research_to_idea_cards.py  enrich_catalog_with_neurobagel.py  fetch_pmc_oa_fulltext_pubget.py  fix_stat_maps_links_ds000114_linebisection.sh  generate_fig84_true_trajectory.py  generate_mappings.py  generate_neurosynth_term_maps.py  generate_r1_conflict_matrix.py  google_file_search.py  import_atlases_neo4j.py  index_codebase_with_google_file_search.py  index_pubget_papers_with_google_file_search.py  inspect_google_stores.py  install_latest_containers.sh  kggen_generate_from_manifest.py  load_yeo_atlas_to_neo4j.py  map_statisticalmaps_to_regions.py  merge_pubget_runs.py  migrate_folder_to_gcp.sh  migrate_metadata_root.py  msc_schaefer_connectomes.py  neo4j_backup.sh  neo4j_restore.sh  neurometabench_screening_pipeline.py  overlay_neurosynth_fast.py  paper2_probe_openneuro_battery.sh  paperbanana_mcp_entry.py  parcellate_and_fit_encoding_model.py  plot_br_kg_concepts.py  plot_br_kg_retrieval_results.py  plot_fig5_paradigmcraft.py  (+7 more)
tests/: PWA_TEST_SUITE_README.md  README_TESTING.md  conftest.py  run_tests.sh  test_analytics_dashboard.py  test_api.py  test_finder_demo.py  test_knowledge_graph_integration.js  test_new_features.py  test_oauth_flow.py  test_orchestrator_contracts.py  test_run_card_integration.py  test_tools.py
(+5510 files in other folders)
